test/integration/bad/tuples/incomplete1.stan
data {
  ( array [ foo ] real , while
